--- a/backend/.env
+++ b/backend/.env
@@ -10,4 +10,4 @@ DB_DATABASE=bookworm_db
 SECRET_KEY=your_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-
+REFRESH_TOKEN_EXPIRE_DAYS=7
