--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,4 +14,5 @@ COPY . .
 EXPOSE 8000
 
 # Run the FastAPI app using Uvicorn
+#CMD ["python", "app/db/seeding.py"]
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
